test: 리팩토링 및 assert 메서드 개선
- Redundant import 제거
- assert 메서드 개선 (`assertSameSizeAs` 사용으로 가독성 향상)
- 변수 순서 변경 및 불필요한 중복 제거